<?xml version="1.0"?>
<package format="2">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>The path_planner package</description>

  <maintainer email="afb2001@wildcats.unh.edu">Alex Brown</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>project11</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>dubins_curves</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>project11_transformations</depend>
  <depend>path_planner_common</depend>
  <export>
  </export>
</package>
